--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 				<div class="elementor-element elementor-element-1166b4c elementor-view-default elementor-widget elementor-widget-icon" data-id="1166b4c" data-element_type="widget" data-widget_type="icon.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-wrapper">
-			<a class="elementor-icon" href="https://web.facebook.com/profile.php?id=61573035453817#">
+			<a class="elementor-icon" href="https://www.facebook.com/profile.php?id=61573169640216">
 			<svg aria-hidden="true" class="e-font-icon-svg e-fab-facebook" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>			</a>
 		</div>
 				</div>
@@ -187,11 +187,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '594034823519235');
+fbq('init', '927757719348240');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=594034823519235&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=927757719348240&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->		</div>
 				</div>
@@ -200,7 +200,7 @@ src="https://www.facebook.com/tr?id=594034823519235&ev=PageView&noscript=1"
 			<script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '640875195183633',
+      appId      : '8907996612662398',
       cookie     : true,
       xfbml      : true,
       version    : 'v19.0'
@@ -252,7 +252,7 @@ src="https://www.facebook.com/tr?id=594034823519235&ev=PageView&noscript=1"
 				<div class="elementor-element elementor-element-43544dc elementor-widget elementor-widget-heading" data-id="43544dc" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>
-Telefone: (21) 9510-0110<br><br>
+Telefone:(16) 9956-4566<br><br>
 E-mail: <a href="mailto:utsimmardla@hotmail.com" data-prosemirror-content-type="mark" data-prosemirror-mark-name="link" style="font-size: 18px">utsimmardla@hotmail.com</a><br></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-e709e10 elementor-widget elementor-widget-heading" data-id="e709e10" data-element_type="widget" data-widget_type="heading.default">
@@ -333,7 +333,7 @@ E-mail: <a href="mailto:utsimmardla@hotmail.com" data-prosemirror-content-type="
 				<div class="elementor-element elementor-element-120dc93 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="120dc93" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/12997020110?text=Ol%C3%A1">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/16999564566?text=Ol%C3%A1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CONVERSAR AGORA</span>
 					</span>
